[package]
name = "dns-watch"
version = "0.2.3"
license = "MIT OR Apache-2.0"
authors = ["Stephen Connolly <stephen.alan.connolly@gmail.com>"]
description = """
Performs DNS lookups and then writes a file from a handlebars template using the DNS lookups
"""

[dependencies]
getopts = "0.2.18"
domain = "0.2.3"
handlebars = "1.0.0"
serde = "1.0.50"
serde_derive = "1.0.50"
serde_json = "1.0.17"
futures = "0.1.23"
meval = "0.1"
