[package]
name = "dns-watch"
version = "0.3.3"
license = "MIT OR Apache-2.0"
authors = ["Stephen Connolly <stephen.alan.connolly@gmail.com>"]
description = """
Performs DNS lookups and then writes a file from a handlebars template using the DNS lookups
"""

[dependencies]
getopts = "0.2"
domain = "0.4"
handlebars = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
meval = "0.1"
regex = "1.1"
